<resources>
    <string name="app_name">Popular Movies</string>
    <string name="image_holder_for_the_poster">Image holder for the poster</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="plot_synopsis">Plot synopsis:</string>
    <string name="user_rating">User rating:</string>
    <string name="release_date">Release date:</string>
    <string name="title">Title:</string>
    <string name="trailer">Trailer</string>
    <string name="author">Author:</string>
    <string name="content">Content</string>
    <string name="trailers">Trailers:</string>
    <string name="reviews">Reviews</string>
</resources>
